--- a/index.css
+++ b/index.css
@@ -383,7 +383,7 @@ section .title::after{
 
 /* teams section styling */
 .teams .title::after{
-    content: "who with me";
+    content: "My work";
 }
 .teams .carousel .card{
     background: #222;
