--- a/index.css
+++ b/index.css
@@ -383,7 +383,7 @@ section .title::after{
 
 /* teams section styling */
 .teams .title::after{
-    content: "My work";
+    content: "What i have";
 }
 .teams .carousel .card{
     background: #222;
